<resources>
    <string name="app_name">Task Timer</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_task">Add Task</string>
    <string name="action_durations_report">Durations Report</string>
    <string name="action_show_about">About TaskTimer</string>
    <string name="action_generate">Generate data</string>
    <string name="text_no_task_selected">No Task Selected</string>
    <string name="edit_button_description">Button to edit a task detail</string>
    <string name="delete_button_desrciption">Button to delete the task</string>
    <string name="hint_add_edit_name">Task name: required</string>
    <string name="hint_add_edit_description">Task description: (optional)</string>
    <string name="hint_add_edit_order">Order: sorts low to high</string>
    <string name="btn_add_edit_save">Save</string>
</resources>