<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="learnprogramming.academy.tasktimer.MainActivity">

    <item
        android:id="@+id/action_add_task"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/action_add_task"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_show_durations"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="20"
        android:title="@string/action_durations_report"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_show_about"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="40"
        android:title="@string/action_show_about"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_generate"
        android:orderInCategory="50"
        android:title="@string/action_generate"
        android:visible="false"
        app:showAsAction="never" />

</menu>
