<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/add_edit_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_edit_name"
        android:importantForAutofill="no"
        android:inputType="text|textNoSuggestions"
        android:maxLength="64"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/add_edit_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_edit_description"
        android:importantForAutofill="no"
        android:inputType="text|textMultiLine"
        android:maxLength="256"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_name" />

    <EditText
        android:id="@+id/add_edit_sortorder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_add_edit_order"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_description" />

    <Button
        android:id="@+id/add_edit_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:text="@string/btn_add_edit_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_edit_sortorder" />

</androidx.constraintlayout.widget.ConstraintLayout>